--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,58 @@
 
-*{
+* {
   box-sizing:border-box;
   padding:0;
   margin:0;
 }
+
 #top {
-background-color:bisque;
 color:black;
+text-align: center;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+h1 {
+  margin: 30px 0px;
+  font-size: 42px;
+  font-weight: 1000;
+  text-align: center ;
+}
+
 h3{
   font-style:initial;
 }
+
 input {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-  }
-  label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-  }
-  button[type=submit] {
-    background-color:black;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size:20px;
-  }
-  button[type=reset]{
-    background-color:grey;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size:20px;
-    margin-left:40px;
-  }
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+button[type=submit] {
+  background-color:black;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size:20px;
+}
+button[type=reset]{
+  background-color:grey;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size:20px;
+  margin-left:40px;
+}
 
   input[type=radio]{
       font-size:20px;
